--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,11 @@
             <scope>test</scope>
         </dependency>
 
-
-
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.3.2</version>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-html -->
         <dependency>
@@ -83,7 +86,7 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.7.2</version>
+            <version>4.8.1</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/junit/junit -->
